<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordResetSendCodeFragment">

    <TextView
        android:id="@+id/passWordResetSendCodeTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/passwordresettitletextview"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passWordResetSendCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/passwordresettextviewemail"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/passWordResetSendCodeTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/passWordResetSendCodeTitleTextView" />

    <EditText
        android:id="@+id/passWordResetEmailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/premailorcodeedittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passWordResetSendCodeTextView" />

    <Button
        android:id="@+id/sendPasswordResetCodeButton"
        android:layout_width="368dp"
        android:layout_height="44dp"
        android:layout_marginBottom="312dp"
        android:text="@string/sendcode"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/IHaveCodeTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="148dp"
        android:clickable="true"
        android:text="@string/Ihavethecode"
        android:textColor="#2f92d7"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendPasswordResetCodeButton" />

</android.support.constraint.ConstraintLayout>